// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse "quoted" bare 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 7,
    "start": 0,
  },
  "src": "\\"value\\"",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 7,
    "start": 0,
  },
}
`;

exports[`parse "quoted" complex mapping key 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 10,
    "start": 2,
  },
  "src": "? \\"value\\" : ",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse "quoted" escaped 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 32,
    "start": 1,
  },
  "src": "
\\"value\\\\\\\\
with \\\\\\"more\\\\\\" lines\\\\\\"\\"
",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 32,
    "start": 1,
  },
}
`;

exports[`parse "quoted" flow seq value 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 10,
    "start": 2,
  },
  "src": "[ \\"value\\" ]",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse "quoted" indented block 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 13,
    "start": 6,
  },
  "src": "    - \\"value\\"
  x",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 13,
    "start": 6,
  },
}
`;

exports[`parse "quoted" multi-line 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 24,
    "start": 1,
  },
  "src": "
\\"value
with
more lines\\"
",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 24,
    "start": 1,
  },
}
`;

exports[`parse "quoted" newline before & after 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 8,
    "start": 1,
  },
  "src": "
\\"value\\"
",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse "quoted" seq value 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 9,
    "start": 2,
  },
  "src": "- \\"value\\"
- ",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse "quoted" with comment 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": Range {
    "end": 27,
    "start": 12,
  },
  "nodeRange": Range {
    "end": 27,
    "start": 3,
  },
  "src": "
  \\"value\\" #comment # here!
",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 10,
    "start": 3,
  },
}
`;

exports[`parse "quoted" without spaces 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 8,
    "start": 1,
  },
  "src": "{\\"value\\",",
  "tag": null,
  "type": "DOUBLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' bare 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 7,
    "start": 0,
  },
  "src": "'value'",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 7,
    "start": 0,
  },
}
`;

exports[`parse 'quoted' complex mapping key 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 10,
    "start": 2,
  },
  "src": "? 'value' : ",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse 'quoted' escaped 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 30,
    "start": 1,
  },
  "src": "
'value
with ''more'' lines'''
",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 30,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' flow seq value 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 10,
    "start": 2,
  },
  "src": "[ 'value' ]",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse 'quoted' indented block 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 13,
    "start": 6,
  },
  "src": "    - 'value'
  x",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 13,
    "start": 6,
  },
}
`;

exports[`parse 'quoted' multi-line 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 24,
    "start": 1,
  },
  "src": "
'value
with
more lines'
",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 24,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' newline before & after 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 8,
    "start": 1,
  },
  "src": "
'value'
",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse 'quoted' seq value 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 9,
    "start": 2,
  },
  "src": "- 'value'
- ",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 9,
    "start": 2,
  },
}
`;

exports[`parse 'quoted' with comment 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": Range {
    "end": 27,
    "start": 12,
  },
  "nodeRange": Range {
    "end": 27,
    "start": 3,
  },
  "src": "
  'value' #comment # here!
",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 10,
    "start": 3,
  },
}
`;

exports[`parse 'quoted' without spaces 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 8,
    "start": 1,
  },
  "src": "{'value',",
  "tag": null,
  "type": "SINGLE",
  "valueRange": Range {
    "end": 8,
    "start": 1,
  },
}
`;

exports[`parse *alias bare 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 6,
    "start": 0,
  },
  "src": "*alias",
  "tag": null,
  "type": "ALIAS",
  "valueRange": Range {
    "end": 6,
    "start": 1,
  },
}
`;

exports[`parse *alias complex mapping key 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 9,
    "start": 2,
  },
  "src": "? *alias : ",
  "tag": null,
  "type": "ALIAS",
  "valueRange": Range {
    "end": 8,
    "start": 3,
  },
}
`;

exports[`parse *alias flow seq value 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 9,
    "start": 2,
  },
  "src": "[ *alias ]",
  "tag": null,
  "type": "ALIAS",
  "valueRange": Range {
    "end": 8,
    "start": 3,
  },
}
`;

exports[`parse *alias indented block 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 12,
    "start": 6,
  },
  "src": "    - *alias
  x",
  "tag": null,
  "type": "ALIAS",
  "valueRange": Range {
    "end": 12,
    "start": 7,
  },
}
`;

exports[`parse *alias newline before & after 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 7,
    "start": 1,
  },
  "src": "
*alias
",
  "tag": null,
  "type": "ALIAS",
  "valueRange": Range {
    "end": 7,
    "start": 2,
  },
}
`;

exports[`parse *alias seq value 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": null,
  "nodeRange": Range {
    "end": 8,
    "start": 2,
  },
  "src": "- *alias
- ",
  "tag": null,
  "type": "ALIAS",
  "valueRange": Range {
    "end": 8,
    "start": 3,
  },
}
`;

exports[`parse *alias with comment 1`] = `
Scalar {
  "anchor": null,
  "blockStyle": null,
  "commentRange": Range {
    "end": 26,
    "start": 11,
  },
  "nodeRange": Range {
    "end": 26,
    "start": 3,
  },
  "src": "
  *alias #comment # here!
",
  "tag": null,
  "type": "ALIAS",
  "valueRange": Range {
    "end": 9,
    "start": 4,
  },
}
`;
